crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__ci_environment_all_debug_variants.snap
---
source: crates/shipper-environment/src/lib.rs
expression: variants
---
- GitHubActions
- GitLabCI
- CircleCI
- TravisCI
- AzurePipelines
- Jenkins
- BitbucketPipelines
- Local
