crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__ci_environment_all_display_variants.snap
---
source: crates/shipper-environment/src/lib.rs
expression: variants
---
- GitHub Actions
- GitLab CI
- CircleCI
- Travis CI
- Azure Pipelines
- Jenkins
- Bitbucket Pipelines
- Local
