crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__ci_environment_serialization.snap
---
source: crates/shipper-environment/src/lib.rs
expression: serialized
---
- "\"GitHubActions\""
- "\"GitLabCI\""
- "\"CircleCI\""
- "\"TravisCI\""
- "\"AzurePipelines\""
- "\"Jenkins\""
- "\"BitbucketPipelines\""
- "\"Local\""
