crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__environment_fingerprint_prerelease_version.snap
---
source: crates/shipper-environment/src/lib.rs
expression: fp
---
shipper_version: 0.3.0-rc.1
cargo_version: 1.82.0-nightly
rust_version: 1.82.0-beta.3
os: linux
arch: x86_64
