crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__environment_fingerprint_structured.snap
---
source: crates/shipper-environment/src/lib.rs
expression: fp
---
shipper_version: 0.3.0
cargo_version: 1.80.0
rust_version: 1.80.0
os: linux
arch: x86_64
