crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__environment_fingerprint_structured_unknown_versions.snap
---
source: crates/shipper-environment/src/lib.rs
expression: fp
---
shipper_version: 0.3.0
cargo_version: ~
rust_version: ~
os: windows
arch: aarch64
