crates/shipper-environment/src/snapshots/shipper_environment__snapshot_tests__environment_info_fingerprint_string_local.snap
---
source: crates/shipper-environment/src/lib.rs
expression: info.fingerprint()
---
"ci:Local|os:macos|arch:aarch64|rust:1.82.0|cargo:1.82.0"
